switch from LocalID to Alias

--- a/cluster/manifests/aws-cloud-controller-manager/rbac.yaml
+++ b/cluster/manifests/aws-cloud-controller-manager/rbac.yaml
@@ -8,7 +8,7 @@ metadata:
     application: kubernetes
     component: aws-cloud-controller-manager
   annotations:
-    iam.amazonaws.com/role: "{{ .Cluster.LocalID }}-cloud-controller-manager"
+    iam.amazonaws.com/role: "cloud-controller-manager-{{ .Cluster.Alias }}"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
