--- a/cluster/manifests/etcd-backup/01-rbac.yaml
+++ b/cluster/manifests/etcd-backup/01-rbac.yaml
@@ -4,7 +4,7 @@ metadata:
   name: etcd-backup
   namespace: kube-system
   annotations:
-    iam.amazonaws.com/role: "{{ .Cluster.LocalID }}-etcd-backup"
+    iam.amazonaws.com/role: "etcd-backup-{{ .Cluster.Alias }}"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
