--- a/cluster/manifests/kube-cluster-autoscaler/01-rbac.yaml
+++ b/cluster/manifests/kube-cluster-autoscaler/01-rbac.yaml
@@ -7,7 +7,7 @@ metadata:
     application: kubernetes
     component: kube-cluster-autoscaler
   annotations:
-    iam.amazonaws.com/role: "{{ .Cluster.LocalID }}-app-autoscaler"
+    iam.amazonaws.com/role: "cluster-autoscaler-{{ .Cluster.Alias }}"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
