--- a/cluster/manifests/kube-node-ready/01-rbac.yaml
+++ b/cluster/manifests/kube-node-ready/01-rbac.yaml
@@ -4,4 +4,4 @@ metadata:
   name: kube-node-ready
   namespace: kube-system
   annotations:
-    iam.amazonaws.com/role: "{{ .Cluster.LocalID }}-kube-node-ready"
+    iam.amazonaws.com/role: "kube-node-ready-{{ .Cluster.Alias }}"
