--- a/cluster/manifests/skipper/rbac.yaml
+++ b/cluster/manifests/skipper/rbac.yaml
@@ -9,7 +9,7 @@ metadata:
 {{ if eq .Cluster.ConfigItems.skipper_open_policy_agent_enabled "true" }}
   # Note: if the role extends beyond OPA use, this condition can be removed
   annotations:
-    iam.amazonaws.com/role: "{{ .Cluster.LocalID }}-app-skipper-ingress"
+    iam.amazonaws.com/role: "skipper-ingress-{{ .Cluster.Alias }}"
 {{ end }}
 ---
 apiVersion: v1
