--- a/cluster/manifests/audittrail-adapter/01-rbac.yaml
+++ b/cluster/manifests/audittrail-adapter/01-rbac.yaml
@@ -4,7 +4,7 @@ metadata:
   name: audittrail-adapter
   namespace: kube-system
   annotations:
-    iam.amazonaws.com/role: "{{ .Cluster.LocalID }}-audittrail-adapter"
+    iam.amazonaws.com/role: "audittrail-adapter-{{ .Cluster.Alias }}"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
