--- a/cluster/manifests/aws-node-decommissioner/01-rbac.yaml
+++ b/cluster/manifests/aws-node-decommissioner/01-rbac.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     application: kubernetes
     component: aws-node-decommissioner
-    iam.amazonaws.com/role: "{{ .Cluster.LocalID }}-aws-node-decommissioner"
+    iam.amazonaws.com/role: "aws-node-decommissioner-{{ .Cluster.Alias }}"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
