--- a/cluster/manifests/cluster-lifecycle-controller/01-rbac.yaml
+++ b/cluster/manifests/cluster-lifecycle-controller/01-rbac.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cluster-lifecycle-controller
   namespace: kube-system
   annotations:
-    iam.amazonaws.com/role: "{{ .Cluster.LocalID }}-cluster-lifecycle-controller"
+    iam.amazonaws.com/role: "cluster-lifecycle-controller-{{ .Cluster.Alias }}"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
