--- a/cluster/manifests/ingress-controller/01-rbac.yaml
+++ b/cluster/manifests/ingress-controller/01-rbac.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kube-ingress-aws-controller
   namespace: kube-system
   annotations:
-    iam.amazonaws.com/role: "{{ .Cluster.LocalID }}-app-ingr-ctrl"
+    iam.amazonaws.com/role: "ingress-controller-{{ .Cluster.Alias }}"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
