--- a/cluster/manifests/kube-metrics-adapter/01-rbac.yaml
+++ b/cluster/manifests/kube-metrics-adapter/01-rbac.yaml
@@ -4,7 +4,7 @@ metadata:
   name: custom-metrics-apiserver
   namespace: kube-system
   annotations:
-    iam.amazonaws.com/role: "{{ .Cluster.LocalID }}-kube-metrics-adapter"
+    iam.amazonaws.com/role: "kube-metrics-adapter-{{ .Cluster.Alias }}"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
