--- a/cluster/manifests/z-karpenter/01-serviceaccount.yaml
+++ b/cluster/manifests/z-karpenter/01-serviceaccount.yaml
@@ -10,5 +10,5 @@ metadata:
     application: kubernetes
     component: karpenter
   annotations:
-    iam.amazonaws.com/role: '{{ .Cluster.LocalID }}-app-karpenter'
+    iam.amazonaws.com/role: "karpenter-{{ .Cluster.Alias }}"
 {{end}}
