--- a/delivery.yaml
+++ b/delivery.yaml
@@ -21,7 +21,7 @@ pipeline:
   commands:
   - desc: install deps
     cmd: |
-      apt-get update && apt-get install -y rsync
+      apt-get update -qq && apt-get install -qq rsync
   - desc: build and push
     cmd: |
       cd ./test/e2e/
