--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -172,6 +172,8 @@ skipper_redis_dial_timeout: "25ms"
 skipper_redis_pool_timeout: "250ms"
 skipper_redis_read_timeout: "25ms"
 skipper_redis_write_timeout: "25ms"
+skipper_redis_min_conns: 25
+skipper_redis_max_conns: 100
 
 skipper_ingress_redis_swarm_enabled: "true"
 skipper_ingress_redis_swim_enabled: "false"
