use the updated flannel-awaiter

--- a/cluster/manifests/flannel/daemonset.yaml
+++ b/cluster/manifests/flannel/daemonset.yaml
@@ -37,7 +37,7 @@ spec:
             memory: 50Mi
       containers:
       - name: delayed-install-cni
-        image: container-registry-test.zalando.net/teapot/flannel-awaiter:pr-14-1
+        image: container-registry.zalando.net/teapot/flannel-awaiter:master-14
         command:
         - /await
         stdin: true
