remove k8s dashboard manifests

--- a/cluster/manifests/dashboard/deployment.yaml
+++ b/cluster/manifests/dashboard/deployment.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Cluster.ConfigItems.k8s_dashboard_enabled "true" }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -113,3 +114,4 @@ metadata:
   labels:
     application: kubernetes
     component: dashboard
+{{ end }}
