--- a/cluster/manifests/dashboard/rbac.yaml
+++ b/cluster/manifests/dashboard/rbac.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Cluster.ConfigItems.k8s_dashboard_enabled "true" }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -107,3 +108,4 @@ subjects:
 - kind: ServiceAccount
   name: kubernetes-dashboard
   namespace: kube-system
+{{ end }}
