--- a/cluster/manifests/dashboard/scraper.yaml
+++ b/cluster/manifests/dashboard/scraper.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Cluster.ConfigItems.k8s_dashboard_enabled "true" }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -74,3 +75,4 @@ spec:
       volumes:
       - name: tmp-volume
         emptyDir: {}
+{{ end }}
