--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -458,6 +458,9 @@ prometheus_ui_users: ""
 dashboard_metrics_scraper_cpu_min: "50m"
 dashboard_metrics_scraper_mem_min: "200Mi"
 
+# config-item to toggle dashboard in a cluster
+k8s_dashboard_enabled: "false"
+
 metrics_service_cpu: "100m"
 metrics_service_mem_max: "4Gi"
 metrics_server_metric_resolution: "15s"
