--- a/cluster/manifests/dashboard/scraper-vpa.yaml
+++ b/cluster/manifests/dashboard/scraper-vpa.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Cluster.ConfigItems.k8s_dashboard_enabled "true" }}
 apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
 metadata:
@@ -19,3 +20,4 @@ spec:
         minAllowed:
           memory: {{ .Cluster.ConfigItems.dashboard_metrics_scraper_mem_min }}
           cpu: {{ .Cluster.ConfigItems.dashboard_metrics_scraper_cpu_min }}
+{{ end }}
