--- a/cluster/manifests/dashboard/service.yaml
+++ b/cluster/manifests/dashboard/service.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Cluster.ConfigItems.k8s_dashboard_enabled "true" }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -14,3 +15,4 @@ spec:
   - port: 80
     targetPort: 9090
     protocol: TCP
+{{ end }}
