--- a/cluster/manifests/deletions.yaml
+++ b/cluster/manifests/deletions.yaml
@@ -324,7 +324,8 @@ post_apply:
 - name: dashboard-metrics-scraper-vpa
   namespace: kube-system
   kind: VerticalPodAutoscaler
-- name: kubernetes-dashboard
-  namespace: kube-system
-  kind: ServiceAccount
+# clean this up in another step after the above resources have been cleaned-up
+# - name: kubernetes-dashboard
+#   namespace: kube-system
+#   kind: ServiceAccount
 {{ end }}
