remove k8s dashboard serviceaccount

--- a/cluster/manifests/deletions.yaml
+++ b/cluster/manifests/deletions.yaml
@@ -324,8 +324,7 @@ post_apply:
 - name: dashboard-metrics-scraper-vpa
   namespace: kube-system
   kind: VerticalPodAutoscaler
-# clean this up in another step after the above resources have been cleaned-up
-# - name: kubernetes-dashboard
-#   namespace: kube-system
-#   kind: ServiceAccount
+- name: kubernetes-dashboard
+  namespace: kube-system
+  kind: ServiceAccount
 {{ end }}
