use AccountName field to infer default Okta client ID

--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -974,7 +974,7 @@ stackset_pcs_support_enabled: "true"
 enable_control_plane_profiling: "false"
 
 okta_auth_issuer_url: ""
-okta_auth_client_id: "kubernetes.cluster.{{.Cluster.Alias}}"
+okta_auth_client_id: "kubernetes.cluster.{{.Cluster.AccountName}}"
 
 # Deploy
 # This section contains config items to enable and disable the the
