--- a/cluster/manifests/roles/poweruser-role.yaml
+++ b/cluster/manifests/roles/poweruser-role.yaml
@@ -46,6 +46,12 @@ rules:
 - apiGroups:
   - ''
   resources:
+  - pods/ephemeralcontainers
+  verbs:
+  - patch
+- apiGroups:
+  - ''
+  resources:
   - pods/exec
   - pods/portforward
   - pods/proxy
