--- a/cluster/manifests/deletions.yaml
+++ b/cluster/manifests/deletions.yaml
@@ -297,34 +297,10 @@ post_apply:
   namespace: kube-system
 
 {{ if ne .Cluster.ConfigItems.k8s_dashboard_enabled "true" }}
-- name: kubernetes-dashboard
-  namespace: kube-system
-  kind: Deployment
-- name: kubernetes-dashboard
-  namespace: kube-system
-  kind: Service
-- name: dashboard-metrics-scraper
-  namespace: kube-system
-  kind: Service
-- name: dashboard-metrics-scraper
-  namespace: kube-system
-  kind: Deployment
-- name: kubernetes-dashboard
-  namespace: kube-system
+- name: readonly-dashboard
   kind: Role
-- name: kubernetes-dashboard
   namespace: kube-system
+- name: readonly-dashboard
   kind: RoleBinding
-- name: kubernetes-dashboard
-  kind: ClusterRole
-- name: kubernetes-dashboard-internal
-  kind: ClusterRoleBinding
-- name: kubernetes-dashboard-readonly
-  kind: ClusterRoleBinding
-- name: dashboard-metrics-scraper-vpa
   namespace: kube-system
-  kind: VerticalPodAutoscaler
-- name: kubernetes-dashboard
-  namespace: kube-system
-  kind: ServiceAccount
 {{ end }}
