--- a/cluster/manifests/roles/readonly-dashboard.yaml
+++ b/cluster/manifests/roles/readonly-dashboard.yaml
@@ -1,3 +1,4 @@
+{{ if ne .Cluster.ConfigItems.k8s_dashboard_enabled "true" }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -8,3 +9,4 @@ rules:
     resources: [ "services/proxy" ]
     verbs: [ "get" ]
     resourceNames: [ "kubernetes-dashboard" ]
+{{ end }}
