fix: canary controller cronjob name
Signed-off-by: Sandor Szücs <sandor.szuecs@zalando.de>

--- a/cluster/manifests/deletions.yaml
+++ b/cluster/manifests/deletions.yaml
@@ -304,3 +304,6 @@ post_apply:
   kind: RoleBinding
   namespace: kube-system
 {{ end }}
+- name: skipper-canary-conrtroller
+  kind: CronJob
+  namespace: kube-system
