ingress: log into both cluster and infra accounts
It makes sense for ingress components to log into
both cluster and infra accounts:
* cluster logs enable correlation with skipper-ingress access logs and
  user application logs
* infra logs enable correlation across clusters
* ingress components typically do not produce large amount of logs
  (unlike skipper-ingress access logs)

For pod-deletion-cost-controller save last chunk of logs
into container status on error to simplify debugging.

Signed-off-by: Alexander Yastrebov <alexander.yastrebov@zalando.de>

--- a/cluster/manifests/skipper/hostname-credentials-controller.yaml
+++ b/cluster/manifests/skipper/hostname-credentials-controller.yaml
@@ -119,7 +119,7 @@ spec:
           annotations:
             kubernetes-log-watcher/scalyr-parser: |
               [{"container": "controller", "parser": "keyValue"}]
-            logging/destination: "{{ .Cluster.ConfigItems.log_destination_infra }}"
+            logging/destination: "{{ .Cluster.ConfigItems.log_destination_both }}"
         spec:
           serviceAccountName: hostname-credentials-controller
           restartPolicy: Never
