Configure listener address for sandbox-tokeninfo
Signed-off-by: Mikkel Oscar Lyderik Larsen <mikkel.larsen@zalando.de>

--- a/cluster/node-pools/master-default/userdata.yaml
+++ b/cluster/node-pools/master-default/userdata.yaml
@@ -418,6 +418,8 @@ write_files:
             value: "https://sandbox.identity.zalando.com"
           - name: LISTEN_ADDRESS
             value: ":9022"
+          - name: METRICS_LISTEN_ADDRESS
+            value: ":9023"
           - name: BUSINESS_PARTNERS
             value: {{ .Cluster.ConfigItems.apiserver_business_partner_ids }}
 {{ end }}
