--- a/cluster/manifests/02-kube-aws-iam-controller/deployment.yaml
+++ b/cluster/manifests/02-kube-aws-iam-controller/deployment.yaml
@@ -27,7 +27,7 @@ spec:
       hostNetwork: true
       containers:
       - name: kube-aws-iam-controller
-        image: container-registry.zalando.net/teapot/kube-aws-iam-controller:v0.3.0-35-gdd6d128
+        image: container-registry.zalando.net/teapot/kube-aws-iam-controller:v0.3.0-37-gba2a742
         env:
         - name: AWS_DEFAULT_REGION
           value: "{{.Cluster.Region}}"
