fix: topology spread timeout
disable: set to 0
defaults: 7m
change via CR

Signed-off-by: Sandor Szücs <sandor.szuecs@zalando.de>

--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -84,12 +84,18 @@ skipper_ingress_max_replicas: "50"
 {{end}}
 skipper_ingress_cpu: "1000m"
 skipper_ingress_memory: "1500Mi"
+
+skipper_topology_spread_enabled: "true"
+skipper_topology_spread_timeout: "7m"
+
+# PHC
 skipper_ingress_health_check_options: "period=10s,min-requests=10,min-drop-probability=0.05,max-drop-probability=0.9,max-unhealthy-endpoints-ratio=0.9"
 
 # Enables deployment of canary version
 skipper_ingress_canary_enabled: "true"
 skipper_ingress_test_single_pod: "false"
 skipper_canary_controller_enabled: "false"
+
 # When set to true (and dedicated node pool for skipper is also true) the
 # daemonset overhead will be subtracted from the cpu settings such
 # that skipper will perfectly fit on the node.
@@ -98,9 +104,9 @@ skipper_ingress_binpack: "true"
 {{else}}
 skipper_ingress_binpack: "false"
 {{end}}
+
 # skipper node-pool
 enable_dedicate_nodepool_skipper: "true"
-skipper_topology_spread_enabled: "true"
 {{if eq .Cluster.Environment "e2e"}}
 skipper_attach_only_to_skipper_node_pool: "false"
 {{else}}
