--- a/cluster/manifests/skipper/deployment.yaml
+++ b/cluster/manifests/skipper/deployment.yaml
@@ -68,8 +68,8 @@ spec:
         prometheus.io/path: /metrics
         prometheus.io/port: "9911"
         prometheus.io/scrape: "true"
-{{- if eq .Cluster.ConfigItems.skipper_topology_spread_enabled "true" }}
-        zalando.org/topology-spread-timeout: 7m
+{{- if and (eq .Cluster.ConfigItems.skipper_topology_spread_enabled "true") (ne .Cluster.ConfigItems.skipper_topology_spread_timeout "0"}}
+        zalando.org/topology-spread-timeout: {{ .Cluster.ConfigItems.skipper_topology_spread_timeout }}
 {{- end }}
     spec:
 {{- if eq .Cluster.ConfigItems.skipper_topology_spread_enabled "true" }}
