skipper: add server connection keepalive limits
Add config items for server connection keepalive limits, set no limits by default.

See https://github.com/zalando/skipper/pull/3246

Signed-off-by: Alexander Yastrebov <alexander.yastrebov@zalando.de>

--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -153,6 +153,10 @@ skipper_close_idle_conns_period: "20s"
 skipper_read_timeout_server: "5m"
 skipper_write_timeout_server: "0"
 
+# skipper server keepalive defaults
+skipper_keepalive_server: "0"
+skipper_keepalive_requests_server: "0"
+
 # skipper startup settings
 {{if eq .Cluster.Environment "production"}}
 skipper_readiness_init_delay_seconds: 60
