--- a/cluster/manifests/skipper/service-internal.yaml
+++ b/cluster/manifests/skipper/service-internal.yaml
@@ -14,7 +14,7 @@ metadata:
     component: ingress
 spec:
   type: ClusterIP
-{{- if eq .Cluster.Provider "zalando-eks") }}
+{{- if eq .Cluster.Provider "zalando-eks" }}
   clusterIP: {{ nthAddressFromCIDR .Cluster.ConfigItems.service_cidr 50 }}
 {{- else}}
   clusterIP: 10.5.99.99
