--- a/cluster/manifests/skipper/deployment.yaml
+++ b/cluster/manifests/skipper/deployment.yaml
@@ -172,7 +172,7 @@ spec:
           - "-wait-for-healthcheck-interval={{ .Cluster.ConfigItems.skipper_wait_for_healthcheck_interval }}"
 {{ if ne .Cluster.ConfigItems.skipper_routesrv_enabled "exec" }}
           - "-kubernetes-east-west-range-domains=ingress.cluster.local"
-          - "-kubernetes-east-west-range-predicates=ClientIP(\"10.2.0.0/15\", \"{{ .Values.vpc_ipv4_cidr }}\")"
+          - "-kubernetes-east-west-range-predicates=ClientIP({{ if eq .Cluster.Provider "zalando-eks" }}{{if eq .Cluster.ConfigItems.eks_ip_family "ipv4"}}\"{{ .Values.vpc_ipv4_cidr }}\"{{else}}\"{{join .Values.vpc_ipv6_cidrs `\",\"`}}\"{{end}}{{else}}\"10.2.0.0/15\", \"{{ .Values.vpc_ipv4_cidr }}\"{{end}})"
           - "-reverse-source-predicate"
 {{ end }}
           - "-proxy-preserve-host"
@@ -304,7 +304,15 @@ spec:
 {{ end }}
 {{ if or (eq .Cluster.ConfigItems.nlb_switch "pre") (eq .Cluster.ConfigItems.nlb_switch "exec") }}
           - "-forwarded-headers=X-Forwarded-For,X-Forwarded-Proto=https,X-Forwarded-Port=443"
+          {{ if eq .Cluster.Provider "zalando-eks" }}
+            {{ if eq .Cluster.ConfigItems.eks_ip_family "ipv6" }}
+          - "-forwarded-headers-exclude-cidrs={{ join .Values.vpc_ipv6_cidrs "," }}"
+            {{ else }}
+          - "-forwarded-headers-exclude-cidrs={{ .Values.vpc_ipv4_cidr }}"
+            {{ end }}
+          {{ else }}
           - "-forwarded-headers-exclude-cidrs=10.2.0.0/15,{{ .Values.vpc_ipv4_cidr}}"
+          {{ end }}
 {{ end }}
 {{ if .Cluster.ConfigItems.skipper_ingress_inline_routes }}
           - "-inline-routes={{ .Cluster.ConfigItems.skipper_ingress_inline_routes }}"
@@ -542,7 +550,7 @@ spec:
           - "-whitelisted-healthcheck-cidr={{ .Values.subnet_ipv6_cidrs }}"
 {{- end }}
           - "-kubernetes-east-west-range-domains=ingress.cluster.local"
-          - "-kubernetes-east-west-range-predicates=ClientIP(\"10.2.0.0/15\", \"{{ .Values.vpc_ipv4_cidr }}\")"
+          - "-kubernetes-east-west-range-predicates=ClientIP({{ if eq .Cluster.Provider "zalando-eks" }}{{if eq .Cluster.ConfigItems.eks_ip_family "ipv4"}}\"{{ .Values.vpc_ipv4_cidr }}\"{{else}}\"{{join .Values.vpc_ipv6_cidrs `\",\"`}}\"{{end}}{{else}}\"10.2.0.0/15\", \"{{ .Values.vpc_ipv4_cidr }}\"{{end}})"
           - "-reverse-source-predicate"
           - "-default-filters-dir=/etc/config/default-filters"
           - '-default-filters-prepend={{ .Cluster.ConfigItems.skipper_default_filters }}'
@@ -565,7 +573,15 @@ spec:
 {{ end }}
 {{ if or (eq .Cluster.ConfigItems.nlb_switch "pre") (eq .Cluster.ConfigItems.nlb_switch "exec") }}
           - "-forwarded-headers=X-Forwarded-For,X-Forwarded-Proto=https,X-Forwarded-Port=443"
+          {{ if eq .Cluster.Provider "zalando-eks" }}
+            {{ if eq .Cluster.ConfigItems.eks_ip_family "ipv6" }}
+          - "-forwarded-headers-exclude-cidrs={{ join .Values.vpc_ipv6_cidrs "," }}"
+            {{ else }}
+          - "-forwarded-headers-exclude-cidrs={{ .Values.vpc_ipv4_cidr }}"
+            {{ end }}
+          {{ else }}
           - "-forwarded-headers-exclude-cidrs=10.2.0.0/15,{{ .Values.vpc_ipv4_cidr}}"
+          {{ end }}
 {{ end }}
           - >-
             -opentracing=lightstep
